# thorvg

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Makefile  README_cmake.md  README_ft_text.md  vcpkg.json
cmake/: config.h.in  thorvg.pc.in  thorvgConfig.cmake.in
inc/: thorvg.h
src/loaders/ft/: tvgFtFace.cpp  tvgFtFace.h  tvgFtFontManager.cpp  tvgFtFontManager.h  tvgFtLoader.cpp  tvgFtLoader.h
src/renderer/: tvgLoadModule.h  tvgLoader.cpp  tvgText.cpp  tvgText.h
src/renderer/gl_engine/: tvgGl.cpp  tvgGl.h
test/: testFtLoader.cpp
tools/ft-text-sample/: ft-text-sample.cpp
